[build_sphinx]
no-doctest = 1

#[egg_info]
#tag_build = .dev1

[tool:pytest]
norecursedirs = .svn *.egg

[upload_docs]
upload_dir = docs/build/html
show_response = 1

[metadata]
name = svfsc
author = Paul Ross
author_email = apaulross@gmail.com
setup_requires = 

install_requires = 

version = 0.4.0rc0
console_scripts = 
keywords = 
classifiers = 
	# Uncomment this if your project is this a library package
	Topic :: Software Development :: Libraries
	Development Status :: 3 - Alpha
tests_require = 
	# Testing dependencies
	psutil
	pytest
	pytest-cov
    pytest-benchmark
description = Sparse Virtual File System
